--- a/manifest.json
+++ b/manifest.json
@@ -14,13 +14,43 @@
         "type": "image/png"
       },
       {
+        "src": "/images/icons/icon48.png",
+        "sizes": "48x48",
+        "type": "image/png"
+      },
+      {
         "src": "/images/icons/icon64.png",
         "sizes": "64x64",
         "type": "image/png"
       },
       {
+        "src": "/images/icons/icon72.png",
+        "sizes": "72x72",
+        "type": "image/png"
+      },
+      {
+        "src": "/images/icons/icon96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
         "src": "/images/icons/icon128.png",
         "sizes": "128x128",
+        "type": "image/png"
+      },
+      {
+        "src": "/images/icons/icon144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      },
+      {
+        "src": "/images/icons/icon168.png",
+        "sizes": "168x168",
+        "type": "image/png"
+      },
+      {
+        "src": "/images/icons/icon192.png",
+        "sizes": "192x192",
         "type": "image/png"
       },
       {
